name:           demo
version:        0.0.1
synopsis:       Demo of subtle crypto hashing
category:       Web
copyright:      2023 Obsidian Systems LLC
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

executable demo
  main-is: Main.hs
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -O2
  build-depends:
      base
    , text
    , reflex-dom
    , reflex-subtle-crypto
    , bytestring
  default-language: Haskell2010

